@@ -2,3 +2,5 @@ DIST AMD-APP-SDK-linux-v2.9-1.599.381-GA-x64.tar.bz2 126276109 SHA256 05337de10a
 DIST AMD-APP-SDK-linux-v2.9-1.599.381-GA-x86.tar.bz2 100512787 SHA256 a66bd935dfe871ecb0e940a4b5bc3bde310fca59a61bf9669f6b580d845c2db5 SHA512 59b3a12b51b22437fe0e743e7e0429455853f11c2a1b65fc91a63d6250dce1230460702287b1dc16a4672114d097a9e002ec93ed8c5063be2b070c242299aa5e WHIRLPOOL 56442f1a6bf03757b3a637f69c4083391540d523a74091318686da9ac8e342ff876285ce05ed3b6d21ce6e50072cdd6f0c239bee3550adafaff0cf2ae2065c6f
 DIST AMD-APP-SDK-v2.9-lnx32.tgz 100284370 SHA256 86c0ebfd6a9037385d83d43237d986614f05ba035f50fd8d45e27c0d3c465646 SHA512 c0490223e5d8880bedf076fc6d7518507d59827caa29507cb0962b3ca4670f2a3a1d083019600ce838385d3116574887739f505cfdc01f5077a00ae584854bd0 WHIRLPOOL e6655eeeb47588d999585249f335571e427528d1a25878d6f16e47d37e1b30db5e1a1e13603f934ee20d76e5a3d16445c348169c3b6b6cbb81e5dfd543a43674
 DIST AMD-APP-SDK-v2.9-lnx64.tgz 149825628 SHA256 6287d3d0700e563f2086188b1b2143a0e988a12c1dc22709b9a23d28b8ae83bb SHA512 b00d92b9e2ead559aa66120697a1dc15ecbc1c880eed99c2a7ed030f6cccce7434245a94aa6149e2ce2dc287cb9443700d7dbc8b3756c7420c0f54cc008065bb WHIRLPOOL b839c042a73251c0b774d1c2f6b968c166f4b74b4828a4f12709220e2c79783833979140127ec98a19b0883d7bf49d031088aeaeeb150855907f18378d5de0a9
+DIST AMD-APP-SDK-v3.0-0.113.50-Beta-linux32-1.tar.bz2 137488316 SHA256 0520a2fac0e945195419ec560e7d340cbcb2da3a3412cb2f38584263a7198d35 SHA512 004d8f26a91e9489953895a9cdb8411701403aa89d8c593eb60c7ebb8eee0bc13f5ffad31a44641b8ac2c25abcc728ed34b78d61b246aa4055806b9ac8715e2c WHIRLPOOL fd1f2f1f4a019c4265eac6c5a3a0098d785878aef7d3f24a81073b188895ade582a44d6c5937c88ec0554141db991ede9f5f3a067ffe60e615bda4d8904b0afc
+DIST AMD-APP-SDK-v3.0-0.113.50-Beta-linux64.tar.bz2 138207347 SHA256 0d806087e5fef7fdfb9372388afe2ff7b382041ba5a23160d58143166005f2d4 SHA512 2b30d7dbaf7004c319c85f272a33d9eb15810839cae1cb70c8097e3c89e488d44efc63059b0e467493b3a7ea8a2336af53c5e99ab862676c35bb9288faa7074c WHIRLPOOL f8b78898d1acb8625512bf0b303aecb8e3bea9c0011c2394494e724af7ed0253e554b791e80cdfdfd8454b8b7516b7f0898879a3912eb08704d9ad38a6905b22
