@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*amdapp-3.0_beta (23 Mar 2015)
+
+  23 Mar 2015; Marius Brehler <marbre@linux.sungazer.de>
+  +amdapp-3.0_beta.ebuild:
+  Add 3.0_beta
+
 *amdapp-2.9.1 (03 Mar 2015)
 
   03 Mar 2015; Marius Brehler <marbre@linux.sungazer.de>
